--- a/blinker.cabal
+++ b/blinker.cabal
@@ -70,9 +70,12 @@ common common-options
   build-depends:
     base,
     Cabal,
+    mtl,
+    transformers,
 
     -- clash-prelude will set suitable version bounds for the plugins
     clash-prelude >= 1.8.1 && < 1.10,
+    clash-cores,
     ghc-typelits-natnormalise,
     ghc-typelits-extra,
     ghc-typelits-knownnat
