--- a/fpga.cabal
+++ b/fpga.cabal
@@ -83,5 +83,5 @@ common common-options
 library
   import: common-options
   hs-source-dirs: src
-  exposed-modules: Blinker
+  exposed-modules: Main
   default-language: Haskell2010
