--- a/blinker.cabal
+++ b/blinker.cabal
@@ -83,5 +83,5 @@ common common-options
 library
   import: common-options
   hs-source-dirs: src
-  exposed-modules: Main
+  exposed-modules: Blinker
   default-language: Haskell2010
